fix z-index for ng-select issue: actually: reduce z-index for sticky ok/cancel buttons

--- a/src/app/banner-check/banner-check.component.scss
+++ b/src/app/banner-check/banner-check.component.scss
@@ -7,5 +7,5 @@
     border-left: none;
     border-right: none;
     border-radius: 0;
-    z-index: 9000;
+    z-index: 100;
 }
