--- a/src/app/countdown/countdown.scss
+++ b/src/app/countdown/countdown.scss
@@ -3,5 +3,5 @@ div.sticky {
     position: sticky;
     top: 0px;
     left: 0px;
-    z-index: 9999;
+    z-index: 200;
 }
