--- a/src/app/reservation/success/success.component.scss
+++ b/src/app/reservation/success/success.component.scss
@@ -15,7 +15,7 @@ p.ticket-info {
     position: sticky;
     bottom: 0px;
     left: 0px;
-    z-index: 9999;
+    z-index: 200;
 }
 
 .border-left-warning {
