--- a/src/app/update-ticket/update-ticket.scss
+++ b/src/app/update-ticket/update-ticket.scss
@@ -19,5 +19,5 @@
     position: sticky;
     bottom: 0px;
     left: 0px;
-    z-index: 9999;
+    z-index: 200;
 }
